# mandelbrot-explorer

./: .gitignore  CMakeLists.txt  README.md
include/: Graphics.hpp  Input.hpp  Mandelbrot.hpp
src/: Graphics.cpp  Input.cpp  Main.cpp  Mandelbrot.cpp
